# chip8-cpp

./: CMakeLists.txt  main.cpp  readme.md
src/: emulator_main.cpp  emulator_main.h  rom.cpp  rom.h
